@@ -6,6 +6,9 @@
   when detecting 7z.
   Closes: GH bug #35
 * Fix configuration for listing .bz2 and .bz3 archives.
+* Added support for the unar program which can extract a lot of
+  archive formats, for example ZIP, RAR, 7Z, TAR, GZIP, BZIP2 etc.
+  Closes: GH bug #39
 
 
 1.14.1 (released 26.10.2023)
